<resources>
    <string name="app_name">Swoosh</string>
    <string name="background">Background</string>
    <string name="swoosh_logo">swoosh logo</string>
    <string name="desired_league">DESIRED LEAGUE</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN!</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find A Team In Your CIty And Dominate The League</string>
    <string name="on_going_all_out">ON GOING ALL OUT!</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I AM A:</string>
    <string name="beginner">BEGINNER</string>
    <string name="advanced">ADVANCED</string>
    <string name="finish">FINISH</string>
    <string name="todo">TODO</string>
    <string name="final_text">Looking For A Men Beginner Near You...</string>
    <string name="sorry_no_one_found">SORRY NO ONE FOUND!</string>
    <string name="home">HOME</string>

</resources>
